argocd/manifests/robot-shop/cart-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: robot-shop
  labels:
    service: cart
    app.kubernetes.io/name: cart
    app.kubernetes.io/part-of: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: cart
  template:
    metadata:
      labels:
        service: cart
        app.kubernetes.io/name: cart
        app.kubernetes.io/part-of: robot-shop
    spec:
      containers:
        - name: cart
          image: 448049792905.dkr.ecr.us-east-1.amazonaws.com/cart:a3a6b0738f083344e5ba4487970a29d8ef9bb6c3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 100Mi
      restartPolicy: Always
