argocd/manifests/robot-shop/payment-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: robot-shop
  labels:
    service: payment
    app.kubernetes.io/name: payment
    app.kubernetes.io/part-of: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: payment
  template:
    metadata:
      labels:
        service: payment
        app.kubernetes.io/name: payment
        app.kubernetes.io/part-of: robot-shop
    spec:
      containers:
        - name: payment
          image: 448049792905.dkr.ecr.us-east-1.amazonaws.com/payment:4ea3c0048dd9bfb83c167815255786ba46c09d04
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 100Mi
      restartPolicy: Always
