argocd/manifests/robot-shop/cart-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: robot-shop
  labels:
    service: cart
    app.kubernetes.io/name: cart
    app.kubernetes.io/part-of: robot-shop
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    service: cart
