argocd/manifests/robot-shop/catalogue-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: robot-shop
  labels:
    service: catalogue
    app.kubernetes.io/name: catalogue
    app.kubernetes.io/part-of: robot-shop
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    service: catalogue
