argocd/manifests/robot-shop/mongodb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: robot-shop
  labels:
    service: mongodb
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/part-of: robot-shop
spec:
  type: ClusterIP
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  selector:
    service: mongodb
