argocd/manifests/robot-shop/payment-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: robot-shop
  labels:
    service: payment
    app.kubernetes.io/name: payment
    app.kubernetes.io/part-of: robot-shop
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    service: payment
