argocd/manifests/robot-shop/rabbitmq-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: robot-shop
  labels:
    service: rabbitmq
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: robot-shop
spec:
  type: ClusterIP
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    service: rabbitmq
