argocd/manifests/robot-shop/ratings-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: robot-shop
  labels:
    service: ratings
    app.kubernetes.io/name: ratings
    app.kubernetes.io/part-of: robot-shop
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    service: ratings
