argocd/manifests/robot-shop/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: robot-shop
  labels:
    service: redis
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: robot-shop
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    service: redis
