argocd/manifests/robot-shop/shipping-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: robot-shop
  labels:
    service: shipping
    app.kubernetes.io/name: shipping
    app.kubernetes.io/part-of: robot-shop
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    service: shipping
