argocd/manifests/robot-shop/user-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: robot-shop
  labels:
    service: user
    app.kubernetes.io/name: user
    app.kubernetes.io/part-of: robot-shop
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    service: user
