argocd/manifests/robot-shop/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: robot-shop
  labels:
    service: web
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: robot-shop
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    service: web
